[build-system]
requires = ['ad_ci_tools==0.1.7',
            'pytz',
            'setuptools',
            'wheel']

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ['py39']
include = '\.py$'
exclude = '''
(
      \.git
    | \.venv
    | __pycache__
    | data
    | docs
    | os
    | spec
    | build
    | dist
)
'''
